# riddlepot

./: .env.sample  .gitignore  .python-version  LICENSE  README.md  manage.py  pyproject.toml
RiddlePot/: settings.py  urls.py  wsgi.py
adapters/api/: main.py
adapters/api/routers/: event_router.py
adapters/persistance/: database.py
application/services/: event_service.py
application/uses_cases/: create_event.py
config/: dependencies.py  settings.py
domain/entities/: event.py
domain/repositories/: event_repository.py
